--- a/platformio.ini
+++ b/platformio.ini
@@ -11,5 +11,7 @@
 [env:nanoatmega328new]
 platform = atmelavr
 board = nanoatmega328new
-
 build_flags = -Wl,-u,vfprintf -lprintf_flt -lm, -Wl,-u,vfscanf -lscanf_flt -lm
+lib_deps = teemuatlut/TMCStepper@^0.7.3
+
+platformio run --target clean
