--- a/platformio.ini
+++ b/platformio.ini
@@ -8,8 +8,8 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:nanoatmega328]
+[env:nanoatmega328new]
 platform = atmelavr
-board = nanoatmega328
+board = nanoatmega328new
 
 build_flags = -Wl,-u,vfprintf -lprintf_flt -lm, -Wl,-u,vfscanf -lscanf_flt -lm
